Created worker endpoints and modeled data for frontend